# bi-system

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
backend/: alembic.ini
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  (+5 more)
data/: README.md
data/legacy/: README.md
docs/plans/: 2026-07-14-m0-engineering-foundation.md  2026-07-15-m1-data-ingestion.md  2026-07-15-m2-data-modeling.md  2026-07-17-development-handoff.md  2026-07-17-m3-m6-multi-agent-development.md  2026-07-18-m3-dashboard-architecture.md  2026-07-18-m3-m6-detailed-parallel-development.md
docs/verification/: bundle-m3.json  licenses-m3.csv  m0-verification.md  m1-verification.md  m2-verification.md  m3-phase25-handoff-2026-07-20.md  m3-r0-browser-evidence.json  m3-r0-canvas-pixels.json  m3-r0-console.json  m3-r0-export-2x.json  m3-r1-verification.md  m3-r2-browser-evidence.json  m3-r2-bundle.json  m3-r2-performance.json  m3-r2-verification.md  m3-verification.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
scripts/: benchmark_m1_ingestion.py  benchmark_m2_queries.py  benchmark_m3_chart_queries.py  capture_m3_ui_acceptance.py  check_files.py  cleanup_ingestion_files.py  collect_m3_acceptance_evidence.py  create_initial_admin.py  export_m3_permission_evidence.py  purge_expired_dashboards.py  run_import_worker.py  run_postgres_tests.py  validate_commit_message.py
(+322 files in other folders)
