[project]
name = "bi-system"
version = "0.1.0"
description = "Modern BI reporting and bulletin editing system"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "openpyxl>=3.1,<4",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.7,<3",
    "python-multipart>=0.0.20,<1",
    "sqlalchemy>=2.0.36,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29,<2",
    "httpx>=0.28,<1",
    "pre-commit>=4,<5",
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/bi_system"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
pythonpath = ["backend/src", "."]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.basedpyright]
include = ["backend/src", "backend/tests", "scripts"]
extraPaths = ["backend/src", "."]
pythonVersion = "3.13"
typeCheckingMode = "strict"
